--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "http-errors": "~1.6.3",
     "less-middleware": "~2.2.1",
     "morgan": "~1.9.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "rotating-file-stream": "^2.1.5"
   },
   "devDependencies": {
     "prettier": "2.3.1"
