--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "less-middleware": "~2.2.1",
+    "log4js": "^6.3.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "rotating-file-stream": "^2.1.5"
