--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "log4js": "^6.3.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "mysql": "^2.18.1",
     "rotating-file-stream": "^2.1.5"
   },
   "devDependencies": {
