--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "build": "webpack",
+    "build:watch": "webpack --watch",
     "db:start": "./scripts/start-db.sh",
     "db:stop": "./scripts/stop-db.sh"
   },
@@ -22,6 +24,14 @@
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
-    "prettier": "2.3.1"
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/runtime": "^7.14.6",
+    "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "gulp-rename": "^2.0.0",
+    "prettier": "2.3.1",
+    "webpack-cli": "^4.7.2"
   }
 }
