--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,19 @@ version: "3.9"
 services:
   web:
     build: .
-    command: sleep 1 && npm run start
+    # sleep for 20 sec, wait for database server start
+    command: sh -c "sleep 20 && npm start"
+    ports:
+      - "3000:3000"
+    environment:
+      NODE_ENV: production
     depends_on:
       - db
-    network_mode: service:db
   db:
     image: mysql:8
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
       - "3306:3306"
-      - "3000:3000"
     environment:
       MYSQL_ROOT_PASSWORD: pwd123
