feat: set env as node way
(cherry picked from commit bb9cb720377e9deccfcf31d8edcc4dbfb8895cac)

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "start": "NODE_ENV=local node ./bin/www",
-    "build": "webpack",
-    "build:watch": "webpack --watch",
+    "start:heroku": "NODE_ENV=heroku node ./bin/www",
     "start:prod": "./scripts/deploy.sh",
     "stop:prod": "./scripts/stop.sh",
+    "build": "webpack",
+    "build:watch": "webpack --watch",
     "db:start": "./scripts/start-db.sh",
     "db:stop": "./scripts/stop-db.sh"
   },
