--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mysql2": "^2.2.5",
     "rotating-file-stream": "^2.1.5",
     "sequelize": "^6.6.2",
-    "spark-md5": "^3.0.0"
+    "spark-md5": "^3.0.1",
+    "tailwind-toast": "^1.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
